fix(frontend): prevent font size being adjusted on iOS landscape mode

--- a/frontend/src/assets/scss/_app.scss
+++ b/frontend/src/assets/scss/_app.scss
@@ -20,6 +20,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-family: "PingFang TC","Lantinghei TC","Heiti TC","Apple LiGothic",微軟正黑體,"Microsoft JhengHei","Microsoft JhengHei UI","Microsoft YaHei","Microsoft YaHei UI","PMingLiU",Arial,sans-serif;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
